--- a/express/package.json
+++ b/express/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.14",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "crypto": "^1.0.1",
@@ -19,7 +20,9 @@
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23",
+    "zipfile": "^0.5.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
